--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "framer-motion": "^12.6.3",
     "next": "^14.1.0",
+    "openai": "^4.98.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
